# ds_good_practices

./: .gitignore  LICENSE  README.md  binary_classification.ipynb  pyproject.toml
